k8s-specifications/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
  namespace: voting-app-stack
  labels:
    name:  postgres-deploy
spec:
  replicas: 1
  
  selector:
    matchLabels:
      name: postgres-pod
      type: postgres-db

  template:
    metadata:
      labels:
        name: postgres-pod
        type: postgres-db
    spec:
      containers:
      - name: postgres
        image: postgres
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 5432
          name: postgres
