k8s-specifications/voting-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-deploy
  namespace: voting-app-stack
  labels:
    name:  voting-app-deploy
spec:
  replicas: 3

  selector:
    matchLabels:
      name: voting-app-pod
      type: frontend

  template:
    metadata:
      labels:
        name: voting-app-pod
        type: frontend
    spec:
      containers:
      - name: voting-app-pod
        imagePullPolicy: Always
        image: ghcr.io/hbollon/k8s-voting-app-aws/vote-app:main
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
