k8s-specifications/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  redis
  namespace: voting-app-stack
  labels:
    name: redis-service
spec:
  type:  ClusterIP
  selector:
    name: redis-pod
    type: redis-db
  ports:
  - port:  6379
    targetPort:  6379
