k8s-specifications/voting-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  voting-app-service
  namespace: voting-app-stack
  labels:
    name: voting-app-service
spec:
  type:  ClusterIP
  selector:
    name: voting-app-pod
    type: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
